--- a/src/styles/agradecimento.css
+++ b/src/styles/agradecimento.css
@@ -90,7 +90,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    gap: 30px;
+    gap: 25px;
 }
 
 footer{
@@ -101,6 +101,7 @@ footer{
 
 .message{
     color: #888;
+    font-size: 25px;
 }
 
 #link{
