--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -53,8 +53,9 @@ main{
     width: 424px;
     height: 39px;
     left: 327px;
-    top: 261px;
+    font-weight: bold;
     background: #FFFFFF;
+    text-indent: 10px;
 }
 
 .rec-password {
@@ -65,6 +66,7 @@ main{
     line-height: 21px;
     text-align: center;
     color: #3F92C5;
+    text-decoration: none;
 }
 
 #main-rotulo{
@@ -92,7 +94,7 @@ label{
     font-size: 24px;
     line-height: 29px;
     color: #FFFFFF;
-    margin-left: 27px;
+    margin-right: 363px;
 }
 
 .criar-conta{
@@ -127,9 +129,19 @@ label{
     color: #FD7979;
 }
 
+#rec-block{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 27px;
+    margin-right: 27px;
+}
+
 #rodape{
+    margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 25px;
+    margin-left: 15px;
 }
