--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -23,17 +23,17 @@ main{
 #login-box{
     text-align: center;
     box-sizing: border-box;
-    width: 488px;
-    height: 455px;
-    left: 293px;
-    top: 121px;
+    width: 850px;
+    height: 780px;
+    left: 586px;
+    top: 242px;
     border: 1px solid #737373;
     border-radius: 15px;
 }
 
 #logo-title {
     color: #FFF;
-    font-size: 40px;
+    font-size: 50px;
 }
 
 #logo {
@@ -44,16 +44,14 @@ main{
 
 .login-info {
     color: #3F92C5;
-    font-size: 18px;
+    font-size: 24px;
     font-family: 'Averia Libre';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
     line-height: 21px;
-    width: 424px;
-    height: 39px;
+    width: 90%;
+    height: 49px;
     left: 327px;
-    font-weight: bold;
     background: #FFFFFF;
     text-indent: 10px;
 }
@@ -62,7 +60,7 @@ main{
     font-family: 'Averia Libre';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 24px;
     line-height: 21px;
     text-align: center;
     color: #3F92C5;
@@ -74,34 +72,37 @@ main{
     font-family: 'Averia Libre';
     font-style: normal;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 35px;
     line-height: 29px;
     color: #FFFFFF;
+    margin-top: 60px;
 }
 
 form{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 100px;
 }
 
 label{
     margin-top: 30px;
+    margin-bottom: 3px;
     text-align: left;
     font-family: 'Averia Libre';
     font-style: normal;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 35px;
     line-height: 29px;
     color: #FFFFFF;
-    margin-right: 363px;
+    margin-right: 672px;
 }
 
 .criar-conta{
     font-family: 'Averia Libre';
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 24px;
     line-height: 24px;
     text-align: center;
     text-decoration-line: underline;
@@ -109,10 +110,13 @@ label{
 }
 
 .botao-entrar {
+    font-family: 'Averia Libre';
+    font-style: normal;
+    font-size: 24px;
     color:#FFF;
     box-sizing: border-box;
-    width: 134px;
-    height: 40px;
+    width: 170px;
+    height: 52px;
     left: 618px;
     top: 494px;
     background: #49B976;
@@ -124,7 +128,7 @@ label{
     font-family: 'Averia Libre';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 24px;
     line-height: 19px;  
     color: #FD7979;
 }
@@ -133,15 +137,15 @@ label{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-left: 27px;
-    margin-right: 27px;
+    margin-left: 39px;
+    margin-right: 39px;
 }
 
 #rodape{
-    margin-top: 30px;
+    margin-top: 90px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 25px;
-    margin-left: 15px;
+    padding: 40px;
+    margin-left: 25px;
 }
