--- a/src/styles/cadastro.css
+++ b/src/styles/cadastro.css
@@ -96,6 +96,7 @@ label{
     border: 1px solid #37BD6D;
     border-radius: 10px;
     margin-left: 570px;
+    cursor: pointer;
 }
 
 #text-invalido{
