--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -112,6 +112,7 @@ label{
     background: #49B976;
     border: 1px solid #37BD6D;
     border-radius: 10px;
+    cursor:pointer;
 }
 
 #text-invalido{
